k8s/backend-local-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-local
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  # no selector on purpose
